WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231756
AX: role="math" elements are no longer considered to have presentational children
https://bugs.webkit.org/show_bug.cgi?id=231756
Summary
AX: role="math" elements are no longer considered to have presentational chil...
Tyler Wilcock
Reported
2021-10-14 12:12:00 PDT
In WAI-ARIA 1.1 (
https://www.w3.org/TR/wai-aria-1.1/#math-0
), role="math" elements were considered to have presentational children. This changed in WAI-ARIA 1.2 (
https://www.w3.org/TR/wai-aria-1.2/#math
).
Attachments
Patch
(6.56 KB, patch)
2021-10-14 12:18 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(6.69 KB, patch)
2021-10-14 12:52 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(6.72 KB, patch)
2021-10-14 12:54 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-14 12:12:12 PDT
<
rdar://problem/84268174
>
Tyler Wilcock
Comment 2
2021-10-14 12:18:29 PDT
Created
attachment 441252
[details]
Patch
Darin Adler
Comment 3
2021-10-14 12:34:39 PDT
Comment on
attachment 441252
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=441252&action=review
> Source/WebCore/accessibility/AccessibilityNodeObject.cpp:401 > #if ENABLE(MATHML) > - return node()->isMathMLElement(); > + return true; > #endif > return false;
Seems like this should use #else. But also, is it really important to return false for this when building without MathML support?
Tyler Wilcock
Comment 4
2021-10-14 12:52:41 PDT
Created
attachment 441261
[details]
Patch
Tyler Wilcock
Comment 5
2021-10-14 12:54:04 PDT
Created
attachment 441263
[details]
Patch
Tyler Wilcock
Comment 6
2021-10-14 12:54:31 PDT
(In reply to Darin Adler from
comment #3
)
> Comment on
attachment 441252
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=441252&action=review
> > > Source/WebCore/accessibility/AccessibilityNodeObject.cpp:401 > > #if ENABLE(MATHML) > > - return node()->isMathMLElement(); > > + return true; > > #endif > > return false; > > Seems like this should use #else. > > But also, is it really important to return false for this when building > without MathML support?
No, it isn't. Submitted a patch with this changed.
EWS
Comment 7
2021-10-15 08:13:30 PDT
Committed
r284246
(
243055@main
): <
https://commits.webkit.org/243055@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441263
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug