AX: role="math" elements are no longer considered to have presentational children https://bugs.webkit.org/show_bug.cgi?id=231756

Patch by Tyler Wilcock <tyler_w@apple.com> on 2021-10-15
Reviewed by Chris Fleizach and Darin Adler.

Source/WebCore:

As of WAI-ARIA 1.2, role="math" elements are no longer considered to
have presentational children.

Test: accessibility/math-has-non-presentational-children.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::canHaveChildren const):
Allow AccessibilityRole::DocumentMath elements to have children.

LayoutTests:

* accessibility/math-has-non-presentational-children-expected.txt: Added.
* accessibility/math-has-non-presentational-children.html: Added.

* accessibility/presentational-children-expected.txt:
* accessibility/presentational-children.html:
Remove the role="math" element from this test because as of WAI-ARIA
1.2 role="math" is no longer considered to have presentational children.
Also change this test to ensure role="meter" elements are considered to
have presentational children because that testcase was missing.

Canonical link: https://commits.webkit.org/243055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284246 268f45cc-cd09-0410-ab3c-d52691b4dbfc